<?xml version="1.0"?>
<package format="3">
  <name>GTSAM_loop_closure</name>
  <version>0.0.0</version>
  <description>The GTSAM_loop_closure_ROS2 package</description>

  <maintainer email="main@todo.todo">main</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
